--- a/index.html
+++ b/index.html
@@ -29,11 +29,19 @@ Like: www.facebook.com/abhaytalreja.me
 
   <div id="app" class="flex flex-col flex-1">
 
+    <!-- Backdrop -->
+    <div x-show="isSideMenu" x-transition:enter="transition ease-in-out duration-150"
+      x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100"
+      x-transition:leave="transition ease-in-out duration-150" x-transition:leave-start="opacity-100"
+      x-transition:leave-end="opacity-0"
+      class="fixed inset-0 z-10 flex items-end bg-black bg-opacity-50 sm:items-center sm:justify-center"></div>
+
     <div class="flex flex-row">
       <!-- SIDE MENU -->
       <div class="flex h-screen bg-grey-100 fixed top-0 left-0 z-50">
-        <aside class="hidden overflow-y-auto bg-gray-100 md:block"
-          :class="{'w-12 pt-2': hideForMiniMenu(), 'w-64': showForMiniMenu()}">
+        <aside class="overflow-y-auto bg-gray-100 md:block"
+          :class="{'w-12 pt-2': hideForMiniMenu(), 'w-64': showForMiniMenu() || isSideMenu, 'hidden': !isSideMenu }"
+          @click.away=" toggleSideMenu()" @keydown.escape="toggleSideMenu()">
           <div>
             <div class="text-gray-500 p-2 inline-flex w-full justify-between">
               <a href="#" x-show="showForMiniMenu()"
@@ -45,9 +53,9 @@ Like: www.facebook.com/abhaytalreja.me
                 </svg>
                 <span class="ml-2 text-xl text-center items-center">TailDash</span>
               </a>
-              <svg @click="toggleMiniMenu()" x-show="showForMiniMenu()" class="w-6 h-11 hover:text-brand"
-                aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                viewBox="0 0 24 24" stroke="currentColor">
+              <svg @click="toggleMiniMenu()" x-show="showForMiniMenu()"
+                class="w-6 h-11 hover:text-brand hidden md:block" aria-hidden="true" fill="none" stroke-linecap="round"
+                stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M11 19l-7-7 7-7m8 14l-7-7 7-7" />
               </svg>
@@ -152,14 +160,22 @@ Like: www.facebook.com/abhaytalreja.me
       </div>
       <!-- HEADER NAV -->
       <div class="flex flex-grow fixed top-0 right-0 bg-white h-16 text-center min-w-full pt-2"
-        :class="{'pl-12 left-12': hideForMiniMenu(), 'pl-64 left-64': showForMiniMenu()}">
+        :class="{'md:pl-12 md:left-12': hideForMiniMenu(), 'md:pl-64 md:left-64': showForMiniMenu()}">
         <div class="overflow-auto flex justify-between w-full">
           <div class="flex flex-row">
+            <button class="px-4 py-2 h-12 inline-flex text-center bg-gray-200 md:hidden" @click="toggleSideMenu()">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd"
+                  d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h6a1 1 0 110 2H4a1 1 0 01-1-1z"
+                  clip-rule="evenodd" />
+              </svg>
+            </button>
             <ui class="list-none inline-flex ml-8">
               <li>
                 <button
                   class="px-5 py-2 text-base h-12 text-gray-600 bg-gray-200 rounded-md transition-colors duration-150 font-semibold"
-                  @click="toggleTopNavPages()">Teams</button>
+                  @click="toggleTopNavPages()" @click.away=" hideTopNavPages()"
+                  @keydown.escape="hideTopNavPages()">Teams</button>
                 <template x-if="isTopNavPages">
                   <ul x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100"
                     x-transition:leave-end="opacity-0"
@@ -228,8 +244,9 @@ Like: www.facebook.com/abhaytalreja.me
               <ui class="list-none inline-flex mr-8">
                 <li>
                   <button
-                    class="px-5 py-2 text-base h-12 inline-flex text-gray-600 rounded-md transition-colors duration-150 font-semibold active:outline-none focus:outline-none"
-                    @click="toggleLanguagePopUp()">
+                    class="w-16 px-3 py-2 text-base h-12 inline-flex text-gray-600 rounded-md transition-colors duration-150 font-semibold active:outline-none focus:outline-none"
+                    @click="toggleLanguagePopUp()" @click.away=" hideLanguagePopUp()"
+                    @keydown.escape="hideLanguagePopUp()">
                     <img class="w-8 h-8 rounded-md" src="/assets/img/svg/226-united-states.svg" alt="">
                   </button>
                   <template x-if="isLanguagePopUp">
@@ -262,14 +279,14 @@ Like: www.facebook.com/abhaytalreja.me
                 </li>
                 <li>
                   <button
-                    class="px-5 py-2 text-base h-12 inline-flex text-gray-600 bg-gray-200 rounded-md transition-colors duration-150 font-semibold active:outline-none focus:outline-none"
-                    @click="toggleUserPopUp()">
+                    class="p-3 text-base h-12 inline-flex text-gray-600 bg-gray-200 rounded-md transition-colors duration-150 font-semibold active:outline-none focus:outline-none"
+                    @click="toggleUserPopUp()" @click.away=" hideUserPopUp()" @keydown.escape="hideUserPopUp()">
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 20 20" fill="currentColor">
                       <path fill-rule="evenodd"
                         d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zm-2 4a5 5 0 00-4.546 2.916A5.986 5.986 0 0010 16a5.986 5.986 0 004.546-2.084A5 5 0 0010 11z"
                         clip-rule="evenodd" />
                     </svg>
-                    <span class="ml-4">Hi <strong>John,</strong></span>
+                    <span class="ml-2"><strong>John</strong></span>
                   </button>
                   <template x-if="isUserPopUp">
                     <ul x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100"
